Added appname to errors